--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.5",
     "chart.js": "^4.3.0",
     "copy-to-clipboard": "^3.3.3",
+    "mongoose": "^8.9.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
